--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux": "^4.1.2",
+    "redux-thunk": "^2.4.1",
     "styled-component": "^2.8.0",
     "styled-components": "^5.3.5",
     "web-vitals": "^2.1.0"
